src/css/main.css
/*
  Partials and vendors here
  */
@import "cookieconsent/build/cookieconsent.min.css";
@import 'imports/tailwind.css';
@import 'imports/fontawesome.css';

@import url('https://fonts.googleapis.com/css?family=Merriweather&display=swap');
@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');

/*
 Customizations go here
*/

.header-img-background {
  @apply align-middle bg-center bg-cover w-full;
  height: 25rem;
}

/*! purgecss start ignore */
.readable {
  text-rendering: optimizeLegibility !important;
  @apply font-readable text-base text-gray-700 select-auto leading-relaxed tracking-wide subpixel-antialiased antialiased text-justify;
}

.readable-title {
  @apply max-w-6xl px-8 py-8;
}

@screen lg {
  .readable-title {
    @apply mt-0 pb-20 px-0 pt-0;
  }
}

.readable-content {
  @apply max-w-6xl px-8 mx-auto py-10;
}

.readable-content .readable-title {
  @apply py-0 px-0;
}

.readable p {
  @apply my-3;
}

.readable a {
  @apply cursor-pointer p-0 border-b border-gray-400 font-medium;
  box-shadow: 0 -3px 0 theme('colors.gray.400') inset;
}

.readable a.unstyle {
  @apply p-0 border-0 font-normal;
  box-shadow: none;
}

.readable a:hover {
  @apply border-teal-400 text-teal-600;
  box-shadow: 0 -3px 0 theme('colors.teal.400') inset;
}

.readable a.unstyle:hover {
  box-shadow: none;
}

.readable sup.footnote-ref a:before {
  content: "[note:";
}

.readable sup.footnote-ref a:after {
  content: "]";
}

.readable sup.footnote-ref a {
  @apply ml-1 pb-0 border-b-2 my-1;
}

.readable em {
  @apply italic;
}

.readable strong {
  @apply font-bold;
}

.readable del {
  @apply line-through;
}

.readable small {
  @apply text-sm;
}

.readable abbr {
  @apply no-underline border-b border-dotted;
  cursor: help;
}

.readable h1 {
  @apply text-4xl font-medium text-teal-600 py-4 text-left;
}

.readable h2 {
  @apply text-3xl font-medium pt-10 pb-3 text-left;
}

.readable h3 {
  @apply text-2xl font-medium pt-8 pb-3 text-left;
}

.readable h4 {
  @apply text-xl font-medium pt-3 pb-2 text-left;
}

.readable h5 {
  @apply text-lg font-semibold py-2 text-left;
}

.readable h6 {
  @apply text-base font-bold py-1 text-left;
}

@screen lg {
  .readable h1 {
    @apply text-5xl text-teal-600 text-left pb-4;
  }

  .readable h2 {
    @apply text-4xl font-medium text-left pt-10 pb-3;
  }

  .readable h3 {
    @apply text-3xl font-medium text-left pt-5 pb-3;
  }

  .readable h4 {
    @apply text-2xl font-medium text-left py-2;
  }

  .readable h5 {
    @apply text-xl font-semibold text-left py-1;
  }

  .readable h6 {
    @apply text-lg font-bold text-left py-0;
  }
}

.readable blockquote {
  @apply pl-3 border-l-4 border-teal-600 italic;
}

.readable dl,
.readable ul,
.readable ol {
  @apply pl-3 py-3;
}

.readable dl dt {
  @apply font-bold;
}

.readable dl dd {
  @apply pl-3;
}

.readable ol li {
  @apply list-decimal ml-5 mb-2;
}

.readable ul li {
  @apply list-disc ml-5 mb-2;
}

.readable hr {
  @apply border-t border-gray-500;
  box-shadow: 0px 1px #f7fafc;
}

.readable table {
  @apply table-auto p-0 border-separate text-left;
  border-spacing: 0;
}

.readable table thead {
  @apply text-center;
}

.readable table tbody td {
  @apply p-1;
}

@screen md {
  .readable table tbody td {
    @apply p-3;
  }
}

.readable table tr th,
.readable table tr td {
  @apply border-r border-b border-gray-500;
}

.readable table tr th:first-child,
.readable table tr td:first-child {
  @apply border-l border-gray-500;
}

.readable table tr th {
  @apply border-t border-gray-500 bg-gray-400 font-bold p-2;
}

.readable table tr:nth-child(even) {
  @apply bg-gray-300;
}

.readable table tr:first-child th:first-child {
  @apply rounded-tl;
}

.readable table tr:first-child th:last-child {
  @apply rounded-tr;
}

.readable table tr:only-child th:only-child {
  @apply rounded-t;
}

.readable table tr:last-child td:first-child {
  @apply rounded-bl;
}

.readable table tr:last-child td:last-child {
  @apply rounded-br;
}

.readable table tr:only-child td:only-child {
  @apply rounded-b;
}

.readable code {
  @apply p-1 shadow-inner rounded bg-gray-800 text-gray-200 overflow-scroll;
}

.readable pre {
  @apply block mb-3 p-1 shadow-inner rounded bg-gray-800 text-gray-200 overflow-scroll;
}

.readable img {
  @apply h-auto max-w-full m-3 text-center border border-gray-400 bg-gray-100 rounded;
}

.readable img.unstyle {
  @apply h-auto max-w-full m-0 text-center border-0 bg-transparent rounded-none;
}

.readable ::selection {
  @apply bg-purple-vivid-200;
}

.readable ::-moz-selection {
  @apply bg-purple-vivid-200;
}

.footnotes {
  @apply my-10;
}
/*! purgecss end ignore */

/* Buttons */

a.btn,
button.btn,
input.btn {
    @apply inline-block py-2 px-3 border-2 text-white cursor-pointer rounded;
    box-shadow: none;
}

a.btn:hover,
button.btn:hover,
input.btn:hover {
    @apply bg-gray-700;
    box-shadow: none;
}

a.btn:focus,
button.btn:focus,
input.btn:focus {
    @apply shadow-outline;
    box-shadow: none;
}

a.btn-success,
button.btn-success,
input.btn-success {
    @apply bg-teal-500 border-teal-500;
    box-shadow: none;
}

a.btn-success:hover,
button.btn-success:hover,
input.btn-success:hover {
    @apply bg-white text-teal-500;
    box-shadow: none;
}

a.btn-success-outline,
button.btn-success-outline,
input.btn-success-outline {
    @apply bg-white border-teal-500 text-teal-500;
    box-shadow: none;
}

a.btn-success-outline:hover,
button.btn-success-outline:hover,
input.btn-success-outline:hover {
    @apply bg-teal-500 text-white;
    box-shadow: none;
}

